# IntentRecognizer

./: CMakeLists.txt  README.md  main.cpp
include/: BasicRecognizer.h  IRecognizer.h  RecognizerAppFactory.h
src/: BasicRecognizer.cpp  CMakeLists.txt  RecognizerAppFactory.cpp
test/: BasicRecognizerTest.cpp
